# JuniorBASIC

./: CMakeLists.txt  Command.cpp  Command.h  Console.cpp  Console.h  ForNextDefinition.cpp  ForNextDefinition.h  Function.cpp  Function.h  Global.cpp  Global.h  Operator.cpp  Operator.h  Program.cpp  Program.h  ShuntingYard.cpp  ShuntingYard.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  Value.cpp  Value.h  Variable.cpp  Variable.h  documentation.txt  main.cpp  todo.txt  utils.cpp  utils.h
